force-app/main/default/objects/Comissao__c/Comissao__c.object-meta.xml
<CustomObject>
    <label>Comissão</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Comissão Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comissões</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>