force-app/main/default/objects/Comissao__c/fields/CommissionPercentage__c.field-meta.xml
<CustomField>
    <fullName>CommissionPercentage__c</fullName>
    <label>Porcentagem de Comissão</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>