force-app/main/default/objects/Comissao__c/fields/ProductGroup__c.field-meta.xml
<CustomField>
    <fullName>ProductGroup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Grupo de Produto</label>
    <referenceTo>ProductGroup__c</referenceTo>
    <relationshipLabel>Comissões</relationshipLabel>
    <relationshipName>Comiss_es</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>