force-app/main/default/objects/Comissao__c/fields/ProductHierarchy__c.field-meta.xml
<CustomField>
    <fullName>ProductHierarchy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hierarquia de Produtos</label>
    <referenceTo>ProductHierarchy__c</referenceTo>
    <relationshipLabel>Comissões</relationshipLabel>
    <relationshipName>Comissoes</relationshipName>
    <type>Lookup</type>
</CustomField>