force-app/main/default/objects/Comissao__c/fields/SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organização de Venda</label>
    <referenceTo>SalesOrg__c</referenceTo>
    <relationshipLabel>Comissões</relationshipLabel>
    <relationshipName>Comissao</relationshipName>
    <type>Lookup</type>
</CustomField>