force-app/main/default/objects/Comissao__c/fields/SellerType__c.field-meta.xml
<CustomField>
    <fullName>SellerType__c</fullName>
    <label>Tipo do Vendedor</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CTV</fullName>
            </value>
            <value>
                <fullName>Franqueado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>